force-app/main/default/objects/Transportation__c/Transportation__c.object-meta.xml
<CustomObject>
    <label>Trucking</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Transportation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Truckings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>