force-app/main/default/objects/Transportation__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>F_TMS_S_O__r.AgentDetailInformation_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Text</type>
</CustomField>