force-app/main/default/objects/Transportation__c/fields/AxisType__c.field-meta.xml
<CustomField>
    <fullName>AxisType__c</fullName>
    <label>Axis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>