force-app/main/default/objects/Transportation__c/fields/BookingNo__c.field-meta.xml
<CustomField>
    <fullName>BookingNo__c</fullName>
    <formula>IF(AdvancedShipment__r.EBookingID__c  &lt;&gt; null,   AdvancedShipment__r.Name ,  F_TMS_S_O__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking No</label>
    <type>Text</type>
</CustomField>