force-app/main/default/objects/Transportation__c/fields/Cargo_Delivery_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Delivery_Remarks__c</fullName>
    <label>Cargo Delivery Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>