force-app/main/default/objects/Transportation__c/fields/CargoPickupAddress__c.field-meta.xml
<CustomField>
    <fullName>CargoPickupAddress__c</fullName>
    <label>Cargo Pickup Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>