force-app/main/default/objects/Transportation__c/fields/CargoPickupCompleted__c.field-meta.xml
<CustomField>
    <fullName>CargoPickupCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargo Pickup Completed</label>
    <type>Checkbox</type>
</CustomField>