force-app/main/default/objects/Transportation__c/fields/CargoPickupDate__c.field-meta.xml
<CustomField>
    <fullName>CargoPickupDate__c</fullName>
    <label>Cargo Pickup Date</label>
    <type>Date</type>
</CustomField>