force-app/main/default/objects/Transportation__c/fields/CargoPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>CargoPickupLocation__c</fullName>
    <label>Cargo Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>