force-app/main/default/objects/Transportation__c/fields/CargoReadyDate__c.field-meta.xml
<CustomField>
    <fullName>CargoReadyDate__c</fullName>
    <label>Cargo Ready Date</label>
    <type>DateTime</type>
</CustomField>