force-app/main/default/objects/Transportation__c/fields/CargoReceiptDateatPort__c.field-meta.xml
<CustomField>
    <fullName>CargoReceiptDateatPort__c</fullName>
    <label>Cargo Receipt Date at Port</label>
    <type>DateTime</type>
</CustomField>