force-app/main/default/objects/Transportation__c/fields/CargoTransportCompleted__c.field-meta.xml
<CustomField>
    <fullName>CargoTransportCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargo Transport Completed</label>
    <type>Checkbox</type>
</CustomField>