force-app/main/default/objects/Transportation__c/fields/CargoTransportDate__c.field-meta.xml
<CustomField>
    <fullName>CargoTransportDate__c</fullName>
    <label>Cargo Transport Date</label>
    <type>Date</type>
</CustomField>