force-app/main/default/objects/Transportation__c/fields/CargoTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>CargoTransportDestination__c</fullName>
    <label>Cargo Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>