force-app/main/default/objects/Transportation__c/fields/CargoTransportDestination_Address__c.field-meta.xml
<CustomField>
    <fullName>CargoTransportDestination_Address__c</fullName>
    <label>Cargo Transport Destination Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>