force-app/main/default/objects/Transportation__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>F_TMS_S_O__r.CarrierDetailInformation_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>