force-app/main/default/objects/Transportation__c/fields/Carrier_Seal__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Seal__c</fullName>
    <label>Carrier Seal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>