force-app/main/default/objects/Transportation__c/fields/CNTRInTrans2__c.field-meta.xml
<CustomField>
    <fullName>CNTRInTrans2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNTR In Trans 2</label>
    <referenceTo>CntrinTrans__c</referenceTo>
    <relationshipLabel>Truckings (CNTR In Trans 2)</relationshipLabel>
    <relationshipName>Truckings1</relationshipName>
    <type>Lookup</type>
</CustomField>