force-app/main/default/objects/Transportation__c/fields/CNTRinTrans__c.field-meta.xml
<CustomField>
    <fullName>CNTRinTrans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNTR in Trans</label>
    <referenceTo>CntrinTrans__c</referenceTo>
    <relationshipLabel>Truckings</relationshipLabel>
    <relationshipName>Truckings</relationshipName>
    <type>Lookup</type>
</CustomField>