force-app/main/default/objects/Transportation__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <formula>F_TMS_S_O__r.ConsigneeDetailInformation_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee</label>
    <type>Text</type>
</CustomField>