force-app/main/default/objects/Transportation__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>