force-app/main/default/objects/Transportation__c/fields/Container_number__c.field-meta.xml
<CustomField>
    <fullName>Container_number__c</fullName>
    <label>Container number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>