force-app/main/default/objects/Transportation__c/fields/ContainerNo__c.field-meta.xml
<CustomField>
    <fullName>ContainerNo__c</fullName>
    <formula>If(   JobContainer__c  &lt;&gt; null,    JobContainer__r.Container_Number__c   ,  CNTRinTrans__r.Container_Number__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container No</label>
    <type>Text</type>
</CustomField>