force-app/main/default/objects/Transportation__c/fields/ContainerType__c.field-meta.xml
<CustomField>
    <fullName>ContainerType__c</fullName>
    <formula>If( JobContainer__c &lt;&gt; null,  Text(JobContainer__r.Container_Type__c) , Text(CNTRinTrans__r.Container_Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Type</label>
    <type>Text</type>
</CustomField>