force-app/main/default/objects/Transportation__c/fields/CrossBorderDate__c.field-meta.xml
<CustomField>
    <fullName>CrossBorderDate__c</fullName>
    <label>Cross Border Date</label>
    <type>DateTime</type>
</CustomField>