force-app/main/default/objects/Transportation__c/fields/Customs_Seal__c.field-meta.xml
<CustomField>
    <fullName>Customs_Seal__c</fullName>
    <label>Customs Seal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>