force-app/main/default/objects/Transportation__c/fields/CutOffTime__c.field-meta.xml
<CustomField>
    <fullName>CutOffTime__c</fullName>
    <formula>F_TMS_S_O__r.Cut_Off_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cut Off Time</label>
    <type>DateTime</type>
</CustomField>