force-app/main/default/objects/Transportation__c/fields/DeclarationReceiveDate__c.field-meta.xml
<CustomField>
    <fullName>DeclarationReceiveDate__c</fullName>
    <label>Declaration Receive Date</label>
    <type>DateTime</type>
</CustomField>