force-app/main/default/objects/Transportation__c/fields/DEMDETCombined__c.field-meta.xml
<CustomField>
    <fullName>DEMDETCombined__c</fullName>
    <label>DEM &amp; DET Combined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>