force-app/main/default/objects/Transportation__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Transportation</relationshipName>
    <type>Lookup</type>
</CustomField>