force-app/main/default/objects/Transportation__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Transportation1</relationshipName>
    <type>Lookup</type>
</CustomField>