force-app/main/default/objects/Transportation__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Transportation</relationshipName>
    <type>Lookup</type>
</CustomField>