force-app/main/default/objects/Transportation__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <formula>Driver__r.LastName + &quot; &quot; + Driver__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>