force-app/main/default/objects/Transportation__c/fields/DriverNumber__c.field-meta.xml
<CustomField>
    <fullName>DriverNumber__c</fullName>
    <formula>Driver__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Contact Number</label>
    <type>Text</type>
</CustomField>