force-app/main/default/objects/Transportation__c/fields/Drop_off_date__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_date__c</fullName>
    <label>Drop-off date</label>
    <type>DateTime</type>
</CustomField>