force-app/main/default/objects/Transportation__c/fields/EmptyPickupAddress__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupAddress__c</fullName>
    <label>Empty Pickup Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>