force-app/main/default/objects/Transportation__c/fields/EmptyPickupCompleted__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empty Pickup Completed</label>
    <type>Checkbox</type>
</CustomField>