force-app/main/default/objects/Transportation__c/fields/EmptyPickupDate__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupDate__c</fullName>
    <label>Empty Pickup Date</label>
    <type>DateTime</type>
</CustomField>