force-app/main/default/objects/Transportation__c/fields/EmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupLocation__c</fullName>
    <label>Empty Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>