force-app/main/default/objects/Transportation__c/fields/EmptyReleaseReferenceNo__c.field-meta.xml
<CustomField>
    <fullName>EmptyReleaseReferenceNo__c</fullName>
    <label>Empty Release Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>