force-app/main/default/objects/Transportation__c/fields/EmptyTransportAddress__c.field-meta.xml
<CustomField>
    <fullName>EmptyTransportAddress__c</fullName>
    <label>Empty Transport Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>