force-app/main/default/objects/Transportation__c/fields/EmptyTransportCompleted__c.field-meta.xml
<CustomField>
    <fullName>EmptyTransportCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empty Transport Completed</label>
    <type>Checkbox</type>
</CustomField>