force-app/main/default/objects/Transportation__c/fields/EmptyTransportDate__c.field-meta.xml
<CustomField>
    <fullName>EmptyTransportDate__c</fullName>
    <label>Empty Transport Date</label>
    <type>Date</type>
</CustomField>