force-app/main/default/objects/Transportation__c/fields/EmptyTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>EmptyTransportDestination__c</fullName>
    <label>Empty Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>