force-app/main/default/objects/Transportation__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>