force-app/main/default/objects/Transportation__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <label>ETD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>