force-app/main/default/objects/Transportation__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Truckings (Final Destination)</relationshipLabel>
    <relationshipName>Truckings2</relationshipName>
    <type>Lookup</type>
</CustomField>