force-app/main/default/objects/Transportation__c/fields/FreeDemurrageDays__c.field-meta.xml
<CustomField>
    <fullName>FreeDemurrageDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Free Demurrage Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>