force-app/main/default/objects/Transportation__c/fields/FreeDetentionDays__c.field-meta.xml
<CustomField>
    <fullName>FreeDetentionDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Free Detention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>