force-app/main/default/objects/Transportation__c/fields/HBLNumber__c.field-meta.xml
<CustomField>
    <fullName>HBLNumber__c</fullName>
    <formula>F_TMS_S_O__r.HBLNumber__c</formula>
    <label>HBLNumber</label>
    <type>Text</type>
</CustomField>