force-app/main/default/objects/Transportation__c/fields/IndustrialZone__c.field-meta.xml
<CustomField>
    <fullName>IndustrialZone__c</fullName>
    <label>Industrial Zone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>