force-app/main/default/objects/Transportation__c/fields/JobContainer2__c.field-meta.xml
<CustomField>
    <fullName>JobContainer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Container 2</label>
    <referenceTo>ConsolCNTR__c</referenceTo>
    <relationshipLabel>Truckings (Job Container 2)</relationshipLabel>
    <relationshipName>Truckings1</relationshipName>
    <type>Lookup</type>
</CustomField>