force-app/main/default/objects/Transportation__c/fields/JobContainer__c.field-meta.xml
<CustomField>
    <fullName>JobContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Container</label>
    <referenceTo>ConsolCNTR__c</referenceTo>
    <relationshipLabel>Truckings</relationshipLabel>
    <relationshipName>Truckings</relationshipName>
    <type>Lookup</type>
</CustomField>