force-app/main/default/objects/Transportation__c/fields/JobNo__c.field-meta.xml
<CustomField>
    <fullName>JobNo__c</fullName>
    <formula>if(ISBLANK(F_TMS_S_O__c)=false, F_TMS_S_O__r.JobRequestID__c, AdvancedShipment__r.FileNo__c)</formula>
    <label>Job No</label>
    <type>Text</type>
</CustomField>