force-app/main/default/objects/Transportation__c/fields/JobShipmentNumber__c.field-meta.xml
<CustomField>
    <fullName>JobShipmentNumber__c</fullName>
    <formula>If(AdvancedShipment__c &lt;&gt; null,    AdvancedShipment__r.FileNo__c  ,  F_TMS_S_O__r.HBLNumber__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job/Shipment Number</label>
    <type>Text</type>
</CustomField>