force-app/main/default/objects/Transportation__c/fields/LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>LoadingDate__c</fullName>
    <label>Loading Date</label>
    <type>DateTime</type>
</CustomField>