force-app/main/default/objects/Transportation__c/fields/MBLNumber__c.field-meta.xml
<CustomField>
    <fullName>MBLNumber__c</fullName>
    <formula>F_TMS_S_O__r.MBLNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBLNumber</label>
    <type>Text</type>
</CustomField>