force-app/main/default/objects/Transportation__c/fields/MeasurementCBM__c.field-meta.xml
<CustomField>
    <fullName>MeasurementCBM__c</fullName>
    <label>Measurement (CBM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>