force-app/main/default/objects/Transportation__c/fields/OurTruckFleet__c.field-meta.xml
<CustomField>
    <fullName>OurTruckFleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Our Truck &amp; Fleet</label>
    <type>Checkbox</type>
</CustomField>