force-app/main/default/objects/Transportation__c/fields/PackingType__c.field-meta.xml
<CustomField>
    <fullName>PackingType__c</fullName>
    <label>Packing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bale</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Barrel</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Carboy</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Cask</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Coil</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Crate</fullName>
            </value>
            <value>
                <fullName>Cylinder</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Flask</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Hogshead</fullName>
            </value>
            <value>
                <fullName>Ingot</fullName>
            </value>
            <value>
                <fullName>Jar</fullName>
            </value>
            <value>
                <fullName>Jug</fullName>
            </value>
            <value>
                <fullName>Keg</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
            <value>
                <fullName>Mat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>