force-app/main/default/objects/Transportation__c/fields/Pick_up_date__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_date__c</fullName>
    <label>Pick up date</label>
    <type>DateTime</type>
</CustomField>