force-app/main/default/objects/Transportation__c/fields/PICofCargoPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PICofCargoPickupLocation__c</fullName>
    <label>PIC of Cargo Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>