force-app/main/default/objects/Transportation__c/fields/PICofCargoTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>PICofCargoTransportDestination__c</fullName>
    <label>PIC of Cargo Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>