force-app/main/default/objects/Transportation__c/fields/PICofEmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PICofEmptyPickupLocation__c</fullName>
    <label>PIC of Empty Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>