force-app/main/default/objects/Transportation__c/fields/PICofEmptyTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>PICofEmptyTransportDestination__c</fullName>
    <label>PIC of Empty Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>