force-app/main/default/objects/Transportation__c/fields/PlaceofDelivery__c.field-meta.xml
<CustomField>
    <fullName>PlaceofDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Truckings (Place of Delivery)</relationshipLabel>
    <relationshipName>Truckings</relationshipName>
    <type>Lookup</type>
</CustomField>