force-app/main/default/objects/Transportation__c/fields/PlaceofReceipt__c.field-meta.xml
<CustomField>
    <fullName>PlaceofReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Truckings (Place of Receipt)</relationshipLabel>
    <relationshipName>Truckings1</relationshipName>
    <type>Lookup</type>
</CustomField>