force-app/main/default/objects/Transportation__c/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <label>Reason For Cancellation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>