force-app/main/default/objects/Transportation__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>if(ISBLANK(F_TMS_S_O__c)=False,HYPERLINK( &quot;/&quot; &amp; CASESAFEID(F_TMS_S_O__r.Salesman__r.Id)
,F_TMS_S_O__r.Salesman__r.FirstName&amp;&quot; &quot;&amp;F_TMS_S_O__r.Salesman__r.LastName 
, &quot;_self&quot; ), HYPERLINK( &quot;/&quot; &amp; CASESAFEID(AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.Id)
,AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.FirstName&amp;&quot; &quot;&amp;AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.LastName 
, &quot;_self&quot; ))</formula>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>