force-app/main/default/objects/Transportation__c/fields/shipper__c.field-meta.xml
<CustomField>
    <fullName>shipper__c</fullName>
    <formula>F_TMS_S_O__r.ShipperDetailInformation_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>shipper</label>
    <type>Text</type>
</CustomField>