force-app/main/default/objects/Transportation__c/fields/TelofCargoPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>TelofCargoPickupLocation__c</fullName>
    <label>Tel of Cargo Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>