force-app/main/default/objects/Transportation__c/fields/TelofCargoTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>TelofCargoTransportDestination__c</fullName>
    <label>Tel of Cargo Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>