force-app/main/default/objects/Transportation__c/fields/TelofEmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>TelofEmptyPickupLocation__c</fullName>
    <label>Tel of Empty Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>