force-app/main/default/objects/Transportation__c/fields/TelofEmptyTransportDestination__c.field-meta.xml
<CustomField>
    <fullName>TelofEmptyTransportDestination__c</fullName>
    <label>Tel of Empty Transport Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>