force-app/main/default/objects/Transportation__c/fields/Transport_Status__c.field-meta.xml
<CustomField>
    <fullName>Transport_Status__c</fullName>
    <label>Transport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Cargo Loading Completed</fullName>
            </value>
            <value>
                <fullName>Cargo Arrived At Warehouse/Factory</fullName>
            </value>
            <value>
                <fullName>Cross Border Completed</fullName>
            </value>
            <value>
                <fullName>Cargo Arrived At Factory/Warehouse</fullName>
            </value>
            <value>
                <fullName>Cargo Dropped Off At Warehouse/Factory</fullName>
            </value>
            <value>
                <fullName>Delivery Completed</fullName>
            </value>
            <value>
                <fullName>Anchoraged</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled by Customer</fullName>
                <isActive>false</isActive>
                <label>Cancelled by Customer</label>
            </value>
            <value>
                <fullName>Cancelled by Driver</fullName>
                <isActive>false</isActive>
                <label>Cancelled by Driver</label>
            </value>
            <value>
                <fullName>Cargo Pickup Completed</fullName>
                <isActive>false</isActive>
                <label>Cargo Pickup Completed</label>
            </value>
            <value>
                <fullName>Cargo Transport Completed</fullName>
                <isActive>false</isActive>
                <label>Cargo Transport Completed</label>
            </value>
            <value>
                <fullName>Contacted to Driver</fullName>
                <isActive>false</isActive>
                <label>Contacted to Driver</label>
            </value>
            <value>
                <fullName>Container dropped off at port</fullName>
                <isActive>false</isActive>
                <label>Container dropped off at port</label>
            </value>
            <value>
                <fullName>Drive arrived at loading place</fullName>
                <isActive>false</isActive>
                <label>Drive arrived at loading place</label>
            </value>
            <value>
                <fullName>Driver Accepted</fullName>
                <isActive>false</isActive>
                <label>Driver Accepted</label>
            </value>
            <value>
                <fullName>Driver Rejected</fullName>
                <isActive>false</isActive>
                <label>Driver Rejected</label>
            </value>
            <value>
                <fullName>Driver arrived at depot</fullName>
                <isActive>false</isActive>
                <label>Driver arrived at depot</label>
            </value>
            <value>
                <fullName>Driver departed from depot</fullName>
                <isActive>false</isActive>
                <label>Driver departed from depot</label>
            </value>
            <value>
                <fullName>Empty Transport Completed</fullName>
                <isActive>false</isActive>
                <label>Empty Transport Completed</label>
            </value>
            <value>
                <fullName>Locked seal</fullName>
                <isActive>false</isActive>
                <label>Locked seal</label>
            </value>
            <value>
                <fullName>On Delivery</fullName>
                <isActive>false</isActive>
                <label>On Delivery</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Pickup Completed</fullName>
                <isActive>false</isActive>
                <label>Pickup Completed</label>
            </value>
            <value>
                <fullName>Request Changed</fullName>
                <isActive>false</isActive>
                <label>Request Changed</label>
            </value>
            <value>
                <fullName>Request Received</fullName>
                <isActive>false</isActive>
                <label>Request Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>