force-app/main/default/objects/Transportation__c/fields/TransportType__c.field-meta.xml
<CustomField>
    <fullName>TransportType__c</fullName>
    <label>Cross Border Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xuất kinh doanh</fullName>
            </value>
            <value>
                <fullName>Nhập kinh doanh</fullName>
            </value>
            <value>
                <fullName>Xuất quá cảnh</fullName>
            </value>
            <value>
                <fullName>Nhập quá cảnh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>