force-app/main/default/objects/Transportation__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipName>Transportation</relationshipName>
    <type>Lookup</type>
</CustomField>