force-app/main/default/objects/Transportation__c/fields/Truck_Plate__c.field-meta.xml
<CustomField>
    <fullName>Truck_Plate__c</fullName>
    <label>Truck Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>