force-app/main/default/objects/Transportation__c/fields/TruckAnchorage__c.field-meta.xml
<CustomField>
    <fullName>TruckAnchorage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Truck Anchorage</label>
    <type>Checkbox</type>
</CustomField>