force-app/main/default/objects/Transportation__c/fields/TruckingBillNo__c.field-meta.xml
<CustomField>
    <fullName>TruckingBillNo__c</fullName>
    <label>Trucking Bill No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>