force-app/main/default/objects/Transportation__c/fields/TruckPlate__c.field-meta.xml
<CustomField>
    <fullName>TruckPlate__c</fullName>
    <formula>Truck__r.PlateNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Plate</label>
    <type>Text</type>
</CustomField>